Implemented fix in service to actually fetch public matches for user subscribed site !