@@ -2,6 +2,7 @@ package lu.ephec.backend_projetdv2026.services;
 
 import jakarta.transaction.Transactional;
 import lu.ephec.backend_projetdv2026.models.Field;
+import lu.ephec.backend_projetdv2026.models.EnumUserRolesType;
 import lu.ephec.backend_projetdv2026.models.Match;
 import lu.ephec.backend_projetdv2026.models.MatchPayments;
 import lu.ephec.backend_projetdv2026.models.MatchPlayers;
@@ -28,18 +29,20 @@ public class MatchService {
     private final JPAFieldRepo jpaFieldRepo;
     private final JPASiteClosureDaysRepo jpaSiteClosureDaysRepo;
     private final JPAMatchPlayersRepo jpaMatchPlayersRepo;
+    private final JPAUserSiteRepo jpaUserSiteRepo;
     private final JPAMatchPaymentsRepo jpaMatchPaymentsRepo;
     private final JPAUserAccountsRepo jpaUserAccountsRepo;
     private final JPAUserPenaltiesRepo jpaUserPenaltiesRepo;
     private final Logger logger = LoggerFactory.getLogger(MatchService.class);
 
     // Dependency Injection
-    public MatchService(JPAMatchRepo jpaMatchRepo, JPAUserRepo jpaUserRepo, JPAFieldRepo jpaFieldRepo, JPASiteClosureDaysRepo jpaSiteClosureDaysRepo, JPAMatchPlayersRepo jpaMatchPlayersRepo, JPAMatchPaymentsRepo jpaMatchPaymentsRepo, JPAUserAccountsRepo jpaUserAccountsRepo, JPAUserPenaltiesRepo jpaUserPenaltiesRepo) {
+    public MatchService(JPAMatchRepo jpaMatchRepo, JPAUserRepo jpaUserRepo, JPAFieldRepo jpaFieldRepo, JPASiteClosureDaysRepo jpaSiteClosureDaysRepo, JPAMatchPlayersRepo jpaMatchPlayersRepo, JPAUserSiteRepo jpaUserSiteRepo, JPAMatchPaymentsRepo jpaMatchPaymentsRepo, JPAUserAccountsRepo jpaUserAccountsRepo, JPAUserPenaltiesRepo jpaUserPenaltiesRepo) {
         this.jpaMatchRepo = jpaMatchRepo;
         this.jpaUserRepo = jpaUserRepo;
         this.jpaFieldRepo = jpaFieldRepo;
         this.jpaSiteClosureDaysRepo = jpaSiteClosureDaysRepo;
         this.jpaMatchPlayersRepo = jpaMatchPlayersRepo;
+        this.jpaUserSiteRepo = jpaUserSiteRepo;
         this.jpaMatchPaymentsRepo = jpaMatchPaymentsRepo;
         this.jpaUserAccountsRepo = jpaUserAccountsRepo;
         this.jpaUserPenaltiesRepo = jpaUserPenaltiesRepo;
@@ -93,10 +96,20 @@ public class MatchService {
     }
 
     //GET AVAILABLE PUBLIC MATCHES FOR USER (part of removing business logic of frontend branch 72)
+    @Transactional
     public List<Match> fetchAvailablePublicMatches(String userId) {
         // Input validation
         ValidationBoiler.verifyNotEmpty(userId, "User ID");
         ValidationBoiler.verifyExists(jpaUserRepo.existsById(userId), "User", userId);
+
+        var user = jpaUserRepo.findById(userId).orElseThrow();
+        boolean hasAllSiteAccess = user.getRole() != null
+                && EnumUserRolesType.ALL_SITE_ACCESS.getId().equals(user.getRole().getId());
+        Set<Integer> userSiteIds = hasAllSiteAccess
+                ? Set.of()
+                : jpaUserSiteRepo.findByUser_Matricule(userId).stream()
+                .map(link -> link.getSite().getSiteId())
+                .collect(Collectors.toSet());
 
         // Get all public matches that are open or pending
         List<Match> publicMatches = jpaMatchRepo.findByTypeAndPubStatus("public", "open");
@@ -118,10 +131,17 @@ public class MatchService {
                             .count();
                     return approvedCount < 4;
                 })
-                .collect(Collectors.toList());
+                .toList();
+
+        // Remove matches not on my site, except for all_site users
+        List<Match> siteFilteredMatches = hasAllSiteAccess
+                ? notFullMatches
+                : notFullMatches.stream()
+                .filter(match -> userSiteIds.contains(match.getField().getSite().getSiteId()))
+                .toList();
 
         // Filter public matches to exclude those the user is already registered for
-        List<Match> availableMatches = notFullMatches.stream()
+        List<Match> availableMatches = siteFilteredMatches.stream()
                 .filter(match -> !registeredMatchIds.contains(match.getMatchId()))
                 .collect(Collectors.toList());
 
